kubernetes/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bahn-alarm-backend
  namespace: bahn-alarm
spec:
  selector:
    matchLabels:
      app: bahn-alarm-backend
  template:
    metadata:
      labels:
        app: bahn-alarm-backend
    spec:
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
      - name: zatong-registry-creds
      containers:
        - name: bahn-alarm-backend
          image: registry.zat.ong/bahn-alarm-backend:latest
          imagePullPolicy: Always
          resources:
            limits:
                memory: 250M
                cpu: 100m
